--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script>window.renderApp()</script>
+  <!-- <script>window.renderApp()</script> -->
 </html>
